--- a/src/sass/settings/_typography.scss
+++ b/src/sass/settings/_typography.scss
@@ -38,7 +38,7 @@ $xui-font-size-icon-xlarge:   2rem; // 32/16
 $xui-line-height-reset: 1;
 
 // Base line height value
-$xui-line-height: 1.3;
+$xui-line-height: 1.3077;
 
 // Custom line height for buttons to achieve the current 17px (1.3077... of 13px)
 $xui-line-height-button: 1.3077;
